--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,8 @@
   ],
   "routes": [
     {
-      "src": "/server(.*)",
-      "dest": "/"
+      "src": "server/(.*)",
+      "dest": "server/"
     }
   ]
 }
