--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "quantumecho-api",
   "version": "1.0.0",
   "description": "",
-  "main": "./server/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon -e js,json"
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^3.8.2",
+    "apollo-server-core": "^3.8.2",
+    "apollo-server-express": "^3.8.2",
+    "cors": "^2.8.5",
     "deepmerge": "^4.2.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
