--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
-  "name": "quantumecho-api",
+  "name": "quantumecho-models",
   "version": "1.0.0",
   "description": "",
-  "main": "",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -e js,json"
+    "start": "ts-node-dev server.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/graphql-upload": "^8.0.11",
+    "@types/node": "^17.0.45",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.6.4"
+  },
   "dependencies": {
-    "apollo-server-core": "^3.8.2",
-    "apollo-server-express": "^3.8.2",
+    "@typegoose/typegoose": "^9.8.1",
+    "@types/cors": "^2.8.12",
     "cors": "^2.8.5",
     "deepmerge": "^4.2.2",
     "dotenv": "^16.0.1",
-    "esm": "^3.2.25",
     "express": "^4.18.1",
-    "graphql": "^16.5.0",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.8.0",
+    "graphql-tools": "^8.2.12",
     "graphql-upload": "^15.0.1",
-    "mongodb": "^4.7.0",
-    "nodemon": "^2.0.16"
+    "mongoose": "^6.3.3"
   }
 }
