--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-graphql": "^0.12.0",
+    "express-graphql-header": "^1.0.1",
     "graphql": "^15.8.0",
     "graphql-tools": "^8.2.12",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^6.3.3"
   }
 }
