--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@types/cors": "^2.8.12",
     "cors": "^2.8.5",
+    "date-fns": "^2.28.0",
     "deepmerge": "^4.2.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
