--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "graphql": "^15.8.0",
     "graphql-tools": "^8.2.12",
     "jwt-decode": "^3.1.2",
-    "mongoose": "^6.3.3"
+    "moment": "^2.29.4",
+    "mongoose": "^6.3.3",
+    "stripe": "^9.15.0"
   }
 }
