--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "@typegoose/typegoose": "^9.9.0",
     "@types/express": "^4.17.13",
     "@types/graphql-upload": "^8.0.11",
-    "@types/node": "^17.0.45",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.6.4"
+    "@types/node": "^17.0.45"
   },
   "dependencies": {
     "@types/cors": "^2.8.12",
@@ -33,6 +31,8 @@
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "mongoose": "^6.3.3",
-    "stripe": "^9.15.0"
+    "stripe": "^9.15.0",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.6.4"
   }
 }
