--- a/package.json
+++ b/package.json
@@ -11,12 +11,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@typegoose/typegoose": "^9.9.0",
-    "@types/express": "^4.17.13",
-    "@types/graphql-upload": "^8.0.11",
-    "@types/node": "^17.0.45"
-  },
   "dependencies": {
     "@types/cors": "^2.8.12",
     "cors": "^2.8.5",
@@ -33,6 +27,10 @@
     "mongoose": "^6.3.3",
     "stripe": "^9.15.0",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "@typegoose/typegoose": "^9.9.0",
+    "@types/express": "^4.17.13",
+    "@types/graphql-upload": "^8.0.11",
+    "@types/node": "^17.0.45"
   }
 }
